feat(aap-r2): adequacao analise projeto r2 — coverage, CONCERNS P1, sonar
R2 delivers FE Vitest coverage (39 tests), JaCoCo global 81.7%, Sonar
aggregate 48%, new_violations 0, and closes CONCERNS P1: transactional
self-invocation, ddl-auto validate, JWT hardening, timing-safe login, and
log redaction. Includes spec/design/tasks/validation artifacts.

Co-authored-by: Cursor <cursoragent@cursor.com>