@@ -12,44 +12,44 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class CargoService {
     private static final Logger logger = LoggerFactory.getLogger(CargoService.class);
     private static final String DOMAIN = "cadastros";
+    private static final String DOMAIN_PREFIX = DomainLogging.prefix(DOMAIN);
 
     private final CargoRepository cargoRepository;
 
     public List<CargoDTO> listarTodos() {
-        logger.info("{}Listando todos os cargos", DomainLogging.prefix(DOMAIN));
+        logger.info("{}Listando todos os cargos", DOMAIN_PREFIX);
         return cargoRepository.findAll().stream()
-                .filter(c -> c.isAtivo())
+                .filter(Cargo::isAtivo)
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CargoDTO buscarPorId(Long id) {
-        logger.info("{}Buscando cargo por ID: {}", DomainLogging.prefix(DOMAIN), id);
+        logger.info("{}Buscando cargo por ID: {}", DOMAIN_PREFIX, id);
         return cargoRepository.findById(id)
-                .filter(c -> c.isAtivo())
+                .filter(Cargo::isAtivo)
                 .map(this::toDTO)
                 .orElseThrow(() -> new CargoNotFoundException(id));
     }
 
     @Transactional
     public CargoDTO cadastrar(CargoDTO dto) {
-        logger.info("{}Cadastrando novo cargo: {}", DomainLogging.prefix(DOMAIN), dto.descricao());
+        logger.info("{}Cadastrando novo cargo: {}", DOMAIN_PREFIX, dto.descricao());
         Cargo cargo = toEntity(dto);
         return toDTO(cargoRepository.save(cargo));
     }
 
     @Transactional
     public CargoDTO atualizar(Long id, CargoDTO dto) {
-        logger.info("{}Atualizando cargo ID: {}", DomainLogging.prefix(DOMAIN), id);
+        logger.info("{}Atualizando cargo ID: {}", DOMAIN_PREFIX, id);
         Cargo cargo = cargoRepository.findById(id)
-                .filter(c -> c.isAtivo())
+                .filter(Cargo::isAtivo)
                 .orElseThrow(() -> new CargoNotFoundException(id));
 
         cargo.setDescricao(dto.descricao());
@@ -58,9 +58,9 @@ public class CargoService {
 
     @Transactional
     public void remover(Long id) {
-        logger.info("{}Removendo cargo ID: {}", DomainLogging.prefix(DOMAIN), id);
+        logger.info("{}Removendo cargo ID: {}", DOMAIN_PREFIX, id);
         Cargo cargo = cargoRepository.findById(id)
-                .filter(c -> c.isAtivo())
+                .filter(Cargo::isAtivo)
                 .orElseThrow(() -> new CargoNotFoundException(id));
         cargo.setAtivo(false);
         cargoRepository.save(cargo);
