@@ -13,7 +13,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,7 +26,7 @@ public class RubricaService {
     public List<RubricaDTO> listarTodas() {
         return rubricaRepository.findByAtivoTrue().stream()
             .map(this::toDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public List<RubricaDTO> listar(String codigo, String descricao, RubricaStatusFiltro status) {
@@ -45,9 +44,10 @@ public class RubricaService {
                 .findByFiltros(codigoPattern, descricaoPattern, resolverAtivo(status))
                 .stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @SuppressWarnings("java:S2447") // null means no ativo filter (all statuses)
     private Boolean resolverAtivo(RubricaStatusFiltro status) {
         if (status == null || status == RubricaStatusFiltro.ATIVO) {
             return true;
